chore: add subscription endpoint doc
